# PyInventory

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS  Dockerfile  MANIFEST.in  Makefile  README.creole  README.md  README.rst  compose.sh  devshell.py  docker-compose.yml  fill_translations.py  git-purge-branches.txt  manage.py  manage.sh  noxfile.py  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml  pythonapp.yml  tests.yml
.run/: Template Django tests.run.xml  Template Python.run.xml  manage.py --help.run.xml  manage.py make_messages.run.xml  manage.py nox.run.xml  manage.py update_req.run.xml  unittests ___all___.run.xml
caddy/: Caddyfile
deployment/: .env  .gitignore  Dockerfile  Makefile  README.creole  common.env  docker-compose.dev.yml  docker-compose.yml  project.env  pyproject.toml
deployment/caddy/: Caddyfile
deployment/django/: entrypoint.sh  gunicorn.conf.py
deployment/inventory/: entrypoint.sh  inventory_settings.py
dev-scripts/: ckeditor_info.py  fill_translations.py
docker/: Caddyfile  entrypoint.sh  init-postgres-user-db.sh
inventory/: __init__.py  apps.py  checks.py  ckeditor_upload.py  context_processors.py  current_category.py  entrypoint.sh  forms.py  inventory_settings.py  middlewares.py  parent_tree.py  permissions.py  persistent_filters.py  signals.py
inventory/admin/: __init__.py  base.py  item.py  location.py  memo.py  tagulous_fix.py
inventory/admin/tests/: test_item.py  test_item_happy_path_1.snapshot.html
inventory/locale/ca/LC_MESSAGES/: django.mo  django.po
inventory/locale/de/LC_MESSAGES/: django.mo  django.po
inventory/locale/en/LC_MESSAGES/: django.mo  django.po
inventory/locale/es/LC_MESSAGES/: django.mo  django.po
inventory/management/commands/: playwright.py  seed_data.py  tree.py
inventory/migrations/: 0001_initial.py  0002_auto_20201017_2211.py  0003_auto_20201024_1830.py  0004_item_user_images.py  0005_serve_uploads_by_django_tools.py  0006_refactor_image_model.py  0007_add_file_attachment.py  0008_last_check_datetime.py  0009_add_memo.py  0010_version_protect_models.py  0011_parent_tree1.py  0012_parent_tree2.py  0013_alter_itemmodel_location.py  0014_alter_itemmodel_description_and_more.py  0015_itemmaincategory_itemmodel_category.py
inventory/models/: __init__.py  base.py  item.py  links.py  location.py  memo.py
inventory/static/: inventory.css
inventory/templates/admin/item/: mass_change_category_action.html
inventory/tests/: __init__.py  test_admin_location_empty_change_list_1.snapshot.html  test_item_images.py  test_link_model.py  test_management_command_seed_data.py  test_management_command_tree.py  test_parent_tree.py
inventory/tests/fixtures/: users.py
inventory_locales/de/LC_MESSAGES/: django.mo  django.po
inventory_locales/en/LC_MESSAGES/: django.po
inventory_project/: __init__.py  __main__.py  dev_shell.py  manage.py  publish.py  settings.py  urls.py  wsgi.py
inventory_project/settings/: base.py  docker.py  local.py  local_docker.py  prod.py  tests.py
inventory_project/templates/admin/: base_site.html  login.html
inventory_project/tests/: __init__.py  fixtures.py  mocks.py  test_admin.py  test_admin_item.py  test_admin_item_auto_group_items_1.snapshot.html  test_admin_item_login_1.snapshot.html  test_admin_item_normal_user_create_minimal_item_1.snapshot.html  test_admin_item_normal_user_create_minimal_item_2.snapshot.html  test_admin_memo.py  test_admin_memo_normal_user_create_minimal_item_1.snapshot.html  test_admin_superuser_admin_index_1.snapshot.html  test_bootstrap.py  test_devshell.py  test_inventory_commands.py  test_inventory_commands_help_1.snapshot.txt  test_inventory_commands_help_django4.2.snapshot.txt  test_lint.py  test_migrations.py  test_models_item.py  test_playwright_admin.py  test_project_setup.py  test_readme_history.py
inventory_tests/: settings.py  test_admin.py  test_migrations.py  test_project_setup.py
locale/de/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.mo  django.po
scripts/: apt-cleanup.sh
src/: .gitignore  Makefile  pyproject.toml
src/inventory/: __init__.py  ckeditor_upload.py  forms.py  middlewares.py  permissions.py  request_dict.py  string_utils.py
src/inventory/admin/: __init__.py  base.py  item.py  location.py  memo.py
src/inventory/management/commands/: run_testserver.py  seed_data.py
src/inventory/migrations/: 0001_initial.py  0002_auto_20201017_2211.py  0003_auto_20201024_1830.py  0004_item_user_images.py  0005_serve_uploads_by_django_tools.py  0006_refactor_image_model.py  0007_add_file_attachment.py  0008_last_check_datetime.py  0009_add_memo.py  0010_version_protect_models.py  0011_parent_tree1.py  0012_parent_tree2.py  0013_alter_itemmodel_location.py
src/inventory/models/: __init__.py  base.py  item.py  links.py  location.py  memo.py
src/inventory/static/: inventory.css  inventory.js
src/inventory/tests/: test_admin_location.py  test_admin_location_empty_change_list_1.snapshot.html  test_item_images.py  test_link_model.py  test_management_command_seed_data.py  test_management_command_tree.py  test_parent_tree.py  test_parent_tree_model.py
src/inventory/tests/fixtures/: users.py
src/inventory/views/: media_files.py
src/inventory_project/: dev_shell.py  manage.py  publish.py  urls.py
src/inventory_project/settings/: base.py  local.py  tests.py
src/inventory_project/tests/: conftest.py  middleware.py  playwright_utils.py  temp_utils.py  test_admin.py  test_admin_item.py  test_admin_item_auto_group_items_1.snapshot.html  test_admin_item_auto_group_items_2.snapshot.html  test_admin_item_login_1.snapshot.html  test_admin_item_normal_user_create_minimal_item_1.snapshot.html  test_admin_item_normal_user_create_minimal_item_2.snapshot.html  test_admin_memo.py  test_admin_memo_normal_user_create_minimal_item_1.snapshot.html  test_bootstrap.py  test_devshell.py  test_inventory_commands.py  test_lint.py  test_models_item.py  test_playwright_admin.py  test_project_setup.py  test_run_testserver.py
(+10 files in other folders)
